--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,8 @@
 
-<h4>About Me</h4>
+<h4>About</h4>
 <p>
-I am a software engineer at <a href="http://www.one97.com">One97</a>. 
+I'm Sameer Akhtar. Working as a software engineer at <a href="http://www.one97.com">One97</a>. My job is my passion and hobby. 
+</p>
+<p>
+I blog about new learnings at work. <br>Based in Delhi, India.
 </p>
