--- a/_includes/themes/hooligan/page.html
+++ b/_includes/themes/hooligan/page.html
@@ -1,16 +1,11 @@
 <div class="page-header-wrapper">
 	<div class="page-header">
-  		<h1>{{ site.title }} {% if site.tagline %} <small>{{ site.tagline }}</small>{% endif %}</h1>
+  		<h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
   	</div>
 </div>
 
 <div class="row">
-  <div class="span8">
+  <div class="span12">
     {{ content }}
-  </div>
-  <div class="span4">
-    <section>
-      {% include about.html %}
-    </section>        
   </div>
 </div>
